# nova-autopilot

./: .gitignore  DEMO_VIDEO_SCRIPT.md  DEVPOST_SUBMISSION.md  README.md  pyproject.toml  requirements.txt
examples/: competitive_intel.py  form_automation.py  news_aggregator.py  price_monitor.py
nova_autopilot/: __init__.py  __main__.py  autopilot.py  models.py
tests/: test_autopilot.py
