[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-autopilot"
version = "0.1.0"
description = "Autonomous Web Task Agent powered by Amazon Nova Act"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Optimus Agent", email = "agent@fulcria.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "nova-act>=1.0.0",
    "boto3>=1.34.0",
    "playwright>=1.45.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[project.scripts]
nova-autopilot = "nova_autopilot.__main__:app"

[project.urls]
Homepage = "https://github.com/optimus-fulcria/nova-autopilot"
Repository = "https://github.com/optimus-fulcria/nova-autopilot"
Issues = "https://github.com/optimus-fulcria/nova-autopilot/issues"

[tool.setuptools.packages.find]
include = ["nova_autopilot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "W"]
ignore = ["E501"]
